Fix paragraph spacing in icon/details editor

--- a/wp-content/plugins/knight-blocks/src/blocks/icon-and-details/editor.scss
+++ b/wp-content/plugins/knight-blocks/src/blocks/icon-and-details/editor.scss
@@ -43,7 +43,8 @@
 	}
 
 	* + p,
-	[data-type="core/heading"] + [data-type="core/paragraph"] {
+	[data-type="core/heading"] + [data-type="core/paragraph"],
+	[data-type="core/paragraph"] + [data-type="core/paragraph"] {
 		margin-top: 0.75rem;
 	}
 }
